<resources>
    <string name="app_name">Yok (Beta)</string>
    <string name="action_settings">About</string>
    <string name="update">Check Updates</string>
    <string name="cicak">Cicak</string>
    <string name="ayam">Ayam</string>
    <string name="beo_burung">Beo (Burung)</string>
    <string name="domba">Domba</string>
    <string name="entog">Entog</string>
    <string name="flamigo">Flamigo</string>
    <string name="gajah">Gajah</string>
    <string name="harimau">Harimau</string>
    <string name="ikan">Ikan</string>
    <string name="jerapah">Jerapah</string>
    <string name="kangguru">Kangguru</string>
    <string name="lumba_lumba">Lumba - Lumba</string>
    <string name="monyet">Monyet</string>
    <string name="nyamuk">Nyamuk</string>
    <string name="orangutan">Orangutan</string>
    <string name="panda">Panda</string>
    <string name="quokka">Quokka</string>
    <string name="rusa">Rusa</string>
    <string name="singa">Singa</string>
    <string name="tikus">Tikus</string>
    <string name="belimbing">Belimbing</string>
    <string name="apel">Apel</string>
    <string name="ceri">Ceri</string>
    <string name="durian">Durian</string>
    <string name="enau_kolang_kaling">Enau/Kolang Kaling</string>
    <string name="jambu_air">Jambu Air</string>
    <string name="persegi">Persegi</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="trapesium">Trapesium</string>
    <string name="segitiga">Segitiga</string>
    <string name="belah_ketupat">Belah Ketupat</string>
    <string name="jajar_genjang">Jajar Genjang</string>
    <string name="coba">Coba</string>
    <string name="hokagelab">Hokagelab</string>
    <string name="yudo_edukasi_tk_v1_0">Yodu Edukasi TK Beta v1.0</string>
    <string name="developed_by_aris_kurniawan">Developed by : Aris Kurniawan</string>
    <string name="iak_3_periode_4">Project Akhir | IAK 3 - Periode 4</string>
</resources>
