<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hokagelab.www.yodu.alphabet"
    android:orientation="vertical"
    android:padding="1dp"
    android:background="@color/backgroundColor"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.hokagelab.www.yodu.alphabet"
        android:orientation="vertical"
        android:padding="1dp"
        android:background="@color/backgroundColor"
        >

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <android.support.v7.widget.CardView
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_margin="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/kotak"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/persegi"
                        android:textColor="@android:color/black"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_margin="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:src="@drawable/rectangular"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/persegi_panjang"
                        android:gravity="center"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <android.support.v7.widget.CardView
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_margin="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/circle"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/lingkaran"
                        android:textColor="@android:color/black"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_margin="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:src="@drawable/trapesium"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/trapesium"
                        android:gravity="center"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <android.support.v7.widget.CardView
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_margin="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/segitiga"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/segitiga"
                        android:textColor="@android:color/black"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_margin="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:src="@drawable/jajar"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/jajar_genjang"
                        android:gravity="center"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <android.support.v7.widget.CardView
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_margin="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/belahketupat"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/belah_ketupat"
                        android:textColor="@android:color/black"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_margin="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UselessLeaf">

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>